# aws-envelope-crypto

./: .gitignore  README.md  pyproject.toml
src/aws_envelope_crypto/: __init__.py  cli.py  envelope.py  kms.py  multi.py  oidc.py
tests/: test_reencrypt.py
